--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 
 .hero {
   height             : 100vh;
-  background-image   : url("/images/bg.png");
+  background-image   : url("/images/0JG9Mct.jpg");
   /* your image */
   background-size    : cover;
   background-position: center;
